changed html structure for easier use

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     margin:10rem auto;
     /* border: 1px solid red; */
-    width: 100px;
+    width: 10rem;
 }
 .ratingsContainer{
 display: flex;
