--- a/style.css
+++ b/style.css
@@ -1,50 +1,53 @@
+:root{
+    --starScale: 0.9rem;
+    --starColor: #FF772C;
+}
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 .container{
-    margin:10rem auto;
-    /* border: 1px solid red; */
-    width: 10rem;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .ratingsContainer{
 display: flex;
-min-height:1.5rem;
 justify-content: space-between;
 align-items: center;
-max-width: 100%;
-/* border: 1px solid red; */
+/* max-width: 100%; */
+gap: calc(var(--starScale)*0.2);
 }
 
 .starContainer{
-    width: 1rem;
-    height: 1rem;
+    width: var(--starScale);
+    height: var(--starScale);
     /* border: 1px solid red; */
     position: relative;
     
 }
 .starFill{
-    /* width:50%; */
-    /* border: 5px solid green; */
     overflow: hidden;
     
 }
 .starOutline{
-    width:1rem;
-    height: 1rem;
-    /* border: 2px solid blue; */
+    width:var(--starScale);
+    height: var(--starScale);
     position: absolute;
     top: 0;
 }
-.starFill img{
-    width:1rem;
-    height: 1rem;
+.starFill svg{
+    width:var(--starScale);
+    height: var(--starScale);
+    fill:var(--starColor)
     
 }
-.starOutline img{
-    width:1rem;
-    height: 1rem;
+.starOutline svg{
+    width:var(--starScale);
+    height: var(--starScale);
+    fill: var(--starColor);
 }
 
 
